# project-tracker

./: .gitignore  pyproject.toml
docs/: _quarto.yml  get-project.md  index.qmd  review-data.qmd
src/project_tracker/: gh.py  models.py
tests/: test_docs.py  test_gh.py
