[project]
authors = [{name = "jgunstone", email = "j.gunstone@maxfordham.com"}]
dependencies = ["quarto", "pydantic"]
description = "Add a short description here"
name = "project-tracker"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
project_tracker = { path = ".", editable = true }

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest_examples",
  "jupyterlab",
  "jupyterlab-quarto>=0.3.5,<0.4",
  "jupytext>=1.16.5,<2",
]

[tool.pixi.environments]
default = { solve-group = "default" }
tests = { features = ["tests"], solve-group = "default" }

[tool.pixi.feature.tests.tasks]
tests = "pytest"
update_examples = "pytest --update-examples"
write_docs = { cmd = "jupyter lab", cwd = "docs" }
preview_docs = { cmd = "quarto preview .", cwd = "docs" }

[tool.pixi.dependencies]
quarto = ">=1.5.57,<2"
